// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileInput accept 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      accept="image/*"
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: rgba(51, 51, 51, 0.06274509803921569);
  color: #444444;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c6:hover {
  text-decoration: underline;
}

.c5 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <a
        class="c6"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput basic 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput basic outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c5:hover {
  text-decoration: underline;
}

.c4 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c2 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2::-webkit-file-upload-button {
  cursor: pointer;
}

.c1 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c1 >circle,
.c1 >ellipse,
.c1 >line,
.c1 >path,
.c1 >polygon,
.c1 >polyline,
.c1 >rect {
  outline: none;
  box-shadow: none;
}

.c1 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c0 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    class="c2"
    name="file"
    type="file"
  />
  <div
    class="c3"
  >
    <span
      class="c4 "
    >
      Drop file here or
    </span>
    <a
      class="c5"
      tabindex="-1"
    >
      browse
    </a>
  </div>
</div>
`;

exports[`FileInput border 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 12px #7D4CDB;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c6:hover {
  text-decoration: underline;
}

.c5 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 6px #7D4CDB;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <a
        class="c6"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput custom theme input font size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c6:hover {
  text-decoration: underline;
}

.c5 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: 16px;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <a
        class="c6"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput disabled 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: center;
  opacity: 1;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  opacity: 0.3;
  cursor: default;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    disabled=""
  >
    <input
      aria-invalid="false"
      class="c3"
      disabled=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <button
        class="c6"
        disabled=""
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput disabled with file selected 1`] = `
.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 18px;
  height: 18px;
  fill: rgba(0, 0, 0, 0.24);
  stroke: rgba(0, 0, 0, 0.24);
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 0px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-top: 6px;
  margin-bottom: 6px;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  border-radius: 8px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: stretch;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c11 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 0 0 auto;
}

.c3 {
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 6px;
  margin-bottom: 6px;
  margin-top: 6px;
  margin-bottom: 0px;
  font-size: 0.875rem;
  line-height: 1rem;
  color: #2e2e2e;
  font-weight: 500;
}

.c10 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 8px 8px;
  font-size: 1.125rem;
  line-height: 0;
  background-color: rgba(0, 0, 0, 0);
  color: #2e2e2e;
  border-style: solid;
  border-width: 1px;
  border-color: rgba(0, 0, 0, 0);
  border-radius: 9999px;
  font-weight: 500;
  padding: 8px 8px;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  opacity: 1;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.24);
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  text-align: center;
  opacity: 1;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c12 >svg {
  display: flex;
  align-self: center;
  vertical-align: middle;
}

.c12:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus >circle,
.c12:focus >ellipse,
.c12:focus >line,
.c12:focus >path,
.c12:focus >polygon,
.c12:focus >polyline,
.c12:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c12:focus ::-moz-focus-inner {
  border: 0;
}

.c12:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) >circle,
.c12:focus:not(:focus-visible) >ellipse,
.c12:focus:not(:focus-visible) >line,
.c12:focus:not(:focus-visible) >path,
.c12:focus:not(:focus-visible) >polygon,
.c12:focus:not(:focus-visible) >polyline,
.c12:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c12:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c14 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  text-align: center;
  opacity: 1;
  cursor: default;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c14:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c14:focus >circle,
.c14:focus >ellipse,
.c14:focus >line,
.c14:focus >path,
.c14:focus >polygon,
.c14:focus >polyline,
.c14:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c14:focus ::-moz-focus-inner {
  border: 0;
}

.c14:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) >circle,
.c14:focus:not(:focus-visible) >ellipse,
.c14:focus:not(:focus-visible) >line,
.c14:focus:not(:focus-visible) >path,
.c14:focus:not(:focus-visible) >polygon,
.c14:focus:not(:focus-visible) >polyline,
.c14:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c14:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c7 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  width: calc(100% - 24px);
  right: 24px;
}

.c7::-webkit-input-placeholder {
  color: #676767;
}

.c7::-moz-placeholder {
  color: #676767;
}

.c7:-ms-input-placeholder {
  color: #676767;
}

.c7 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7:-moz-placeholder,
.c7::-moz-placeholder {
  opacity: 1;
}

.c7::-webkit-input-placeholder {
  font-weight: 400;
}

.c7::-moz-placeholder {
  font-weight: 400;
}

.c7:-ms-input-placeholder {
  font-weight: 400;
}

.c7::-moz-focus-inner {
  border: none;
  outline: none;
}

.c7::-webkit-file-upload-button {
  cursor: pointer;
}

.c6 {
  cursor: pointer;
  position: relative;
  opacity: 0.3;
  cursor: default;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6 >circle,
.c6 >ellipse,
.c6 >line,
.c6 >path,
.c6 >polygon,
.c6 >polyline,
.c6 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6 ::-moz-focus-inner {
  border: 0;
}

.c2 [class*="ContentBox"] label {
  padding-block: 5px;
  padding-inline: 8px;
}

.c2 [class*="ContentBox"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0);
}

.c2 [class*="ContentBox"] [role="group"],
.c2 [class*="ContentBox"] [role="radiogroup"] {
  gap: 0;
  padding-block: 0px;
  padding-inline: none;
}

.c2 [class*="ContentBox"] [role="group"] label,
.c2 [class*="ContentBox"] [role="radiogroup"] label {
  border: 1px solid rgba(0, 0, 0, 0);
  padding-block: 5px;
  padding-inline: 8px;
  border-radius: 6px;
}

.c2 [class*="ContentBox"] [role="group"] label:hover:not([disabled]),
.c2 [class*="ContentBox"] [role="radiogroup"] label:hover:not([disabled]) {
  background: rgba(0, 0, 0, 0.04);
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    margin-top: 3px;
    margin-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    margin: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 c2"
    >
      <label
        class="c3"
        for="fileInput"
        id="grommet-fileInput__label"
      >
        File input with max size
      </label>
      <div
        class="c4 "
      >
        <div
          class="c5 c6"
          disabled=""
        >
          <input
            aria-invalid="false"
            class="c7"
            disabled=""
            id="fileInput"
            name="fileInput"
            type="file"
          />
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              <span
                class="c10 "
              >
                file-size-okay.csv
              </span>
            </div>
            <div
              class="c11"
            >
              <button
                aria-label="remove file-size-okay.csv"
                class="c12"
                disabled=""
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="c13"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                    vector-effect="non-scaling-stroke"
                  />
                </svg>
              </button>
              <button
                class="c14"
                disabled=""
                tabindex="-1"
                type="button"
              >
                browse
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`FileInput margin 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 12px;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c6:hover {
  text-decoration: underline;
}

.c5 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <a
        class="c6"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;

exports[`FileInput maxSize 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput messages 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        test browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop files here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple aggregateThreshold 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop files here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput multiple max 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1.125rem;
  line-height: 1.5rem;
  background-color: #ffffff;
  color: #555555;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 1px rgba(0, 0, 0, 0.36);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding-left: 6px;
  padding-right: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c5 {
  margin: 12px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #676767;
  font-weight: undefined;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: none;
  border-radius: 9999px;
  padding: 4px 22px;
  font-size: 1.125rem;
  line-height: 1.5rem;
  padding: 5px 18px;
  background-color: rgba(0, 0, 0, 0.04);
  color: #006750;
  border-radius: 9999px;
  font-weight: 500;
  text-align: center;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  background-color: rgba(0, 0, 0, 0.08);
  color: #006750;
}

.c6:focus {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline-offset: 2px;
  outline: 2px solid #004233;
  box-shadow: 0 0 0px 2px #ffffff;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  line-height: inherit;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 5px;
  padding-bottom: 5px;
  font-weight: 400;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.36);
  border-radius: 8px;
  color: #2e2e2e;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #676767;
}

.c3::-moz-placeholder {
  color: #676767;
}

.c3:-ms-input-placeholder {
  color: #676767;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
}

.c3::-moz-placeholder {
  font-weight: 400;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  border-radius: 8px;
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline-offset: 0px;
  outline: none;
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: solid 1px rgba(0, 0, 0, 0.36);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 3px;
    padding-right: 3px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      multiple=""
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop files here or
      </span>
      <button
        class="c6"
        tabindex="-1"
        type="button"
      >
        browse
      </button>
    </div>
  </div>
</div>
`;

exports[`FileInput pad 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: dashed 2px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  justify-content: center;
  padding: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
}

.c6 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  align-self: center;
  margin: 12px;
}

.c6:hover {
  text-decoration: underline;
}

.c5 {
  margin: 12px;
  font-size: 18px;
  line-height: 24px;
}

.c3 {
  position: absolute;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  font-size: 0;
  opacity: 0;
  border: none;
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3::-webkit-file-upload-button {
  cursor: pointer;
}

.c2 {
  cursor: pointer;
  position: relative;
  outline: none;
  box-shadow: none;
}

.c2 >circle,
.c2 >ellipse,
.c2 >line,
.c2 >path,
.c2 >polygon,
.c2 >polyline,
.c2 >rect {
  outline: none;
  box-shadow: none;
}

.c2 ::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border: dashed 2px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <input
      aria-invalid="false"
      class="c3"
      name="file"
      type="file"
    />
    <div
      class="c4"
    >
      <span
        class="c5 "
      >
        Drop file here or
      </span>
      <a
        class="c6"
        tabindex="-1"
      >
        browse
      </a>
    </div>
  </div>
</div>
`;
